# Netsim

./: .gitignore  README.md  Watpliwosci.txt  awdawd  choose_receiver alghoritm test.txt  git.ignore
NetSim/: CMakeLists.txt  main.cpp
NetSim/include/: factory.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
NetSim/src/: factory.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
NetSim/test/: test_factory_io.cpp  test_reports.cpp  test_reports2.cpp  test_test.cpp
